tests/paczka1/small_fuzzy/83055012.err
Error in line 1: 7XXUDvzeW A890 25,6
Error in line 3: qNE5IzNK A890 52,1
Error in line 11: b3P8pQqW S334 2,8
